# GPU_HoughEdgeProject

./: .gitignore  CMakeLists.txt  README.md  a.out  buildfile.sh  buildfile_GPU.sh  buildfile_HOUGH.sh  main  main.cpp  main.h  main_gpu  main_gpu.cpp  main_gpu.cu  main_gpu_cu  main_gpu_cu.cu  main_hough.cpp
build_hough/: Makefile
libs/: args.hxx
output/: times.txt
